fix overflow on ipad portrait

--- a/css/screen.css
+++ b/css/screen.css
@@ -49,11 +49,15 @@ body {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
   color: var(--primary-text-color);
   font-size: max(var(--vw-relative-font-size), 12px);
   line-height: 1.25;
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
 }
 
 svg text {
@@ -886,7 +890,7 @@ main .column {
   }
 
   .demos-inner-wrapper {
-    max-width: 59.40825vw;
+    max-width: 60vw;
     margin: 0 1.375em 0 auto;
   }
 
